[gd_scene load_steps=20 format=2]

[ext_resource path="res://tiles.tres" type="TileSet" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://viking2.png" type="Texture" id=3]
[ext_resource path="res://HEALTHBARJ.tscn" type="PackedScene" id=4]
[ext_resource path="res://HEALTHBAR.gd" type="Script" id=5]
[ext_resource path="res://spikes.tscn" type="PackedScene" id=6]
[ext_resource path="res://SCENE.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 72.0
height = 96.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
resource_name = "attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 27, 27, 28, 29, 30, 31 ]
}

[sub_resource type="Animation" id=8]
resource_name = "damage"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.819608, 0.113725, 0.113725, 1 ), Color( 0.878431, 0.827451, 0.827451, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "dead"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 44, 45, 46, 47, 48, 49, 51 ]
}

[sub_resource type="Animation" id=3]
resource_name = "fall"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=9]
resource_name = "flash"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=5]
resource_name = "jump"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 18, 19 ]
}

[sub_resource type="Animation" id=10]
resource_name = "rest"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.878431, 0.827451, 0.827451, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 9, 9, 10, 11, 12, 13, 14 ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 32, 100 )

[node name="world" type="Node2D"]
script = ExtResource( 7 )

[node name="player" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="player"]
position = Vector2( 104, -216 )
scale = Vector2( 8.67708, 13.2124 )
texture = ExtResource( 3 )
hframes = 9
vframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2( 96, -112 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="player"]
current = true
zoom = Vector2( 2, 2 )
smoothing_enabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
anims/RESET = SubResource( 2 )
anims/attack = SubResource( 7 )
anims/damage = SubResource( 8 )
anims/dead = SubResource( 11 )
anims/fall = SubResource( 3 )
anims/flash = SubResource( 9 )
anims/idle = SubResource( 4 )
anims/jump = SubResource( 5 )
anims/rest = SubResource( 10 )
anims/run = SubResource( 6 )

[node name="invulnerabilityTimer" type="Timer" parent="player"]
wait_time = 0.8
one_shot = true

[node name="attackarea" type="Area2D" parent="player"]

[node name="attackcolision" type="CollisionShape2D" parent="player/attackarea"]
position = Vector2( 208, -100 )
shape = SubResource( 12 )
disabled = true

[node name="Healthbar" parent="player" instance=ExtResource( 4 )]
margin_left = -8.0
margin_top = -264.0
margin_right = -8.0
margin_bottom = -264.0
rect_scale = Vector2( 1, 2 )
script = ExtResource( 5 )

[node name="Timer" type="Timer" parent="player"]
one_shot = true

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_custom_transform = Transform2D( 32, 32, 0, 64, 0, 0 )
format = 1
tile_data = PoolIntArray( -524301, 0, 0, 65523, 0, 0, 65532, 0, 0, 5, 0, 0, 14, 0, 0, 23, 0, 0, 32, 0, 0, 41, 1, 0, 50, 0, 0, 59, 1, 0, 65604, 0, 0 )

[node name="Area2D" parent="." instance=ExtResource( 6 )]
position = Vector2( 600, -104 )
scale = Vector2( 0.26, 0.26 )

[connection signal="animation_finished" from="player/AnimationPlayer" to="player" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="player/invulnerabilityTimer" to="player" method="_on_invulnerabilityTimer_timeout"]
[connection signal="timeout" from="player/Timer" to="player" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Area2D" to="player" method="_on_Area2D_body_entered"]
